force-app/main/default/objects/Case/fields/Jpetto__Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Jpetto__Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Item</label>
    <referenceTo>Jpetto__Work_Item__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>