force-app/main/default/objects/Case/fields/Work_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_ID__c</fullName>
    <label>Work Item ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>