force-app/main/default/objects/Case/fields/Work_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Name__c</fullName>
    <label>Work Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>