force-app/main/default/objects/Case/fields/Work_Item_URL__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_URL__c</fullName>
    <label>Work Item URL</label>
    <type>Url</type>
</CustomField>