force-app/main/default/objects/Case/recordTypes/Standard_Case.recordType-meta.xml
<RecordType>
    <fullName>Standard_Case</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Standard Case</label>
</RecordType>