force-app/main/default/objects/Case/listViews/Client_Project_Support_Case.listView-meta.xml
<ListView>
    <fullName>Client_Project_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Client Project Support</label>
    <queue>Client_Project_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>