force-app/main/default/objects/Case/listViews/Dodge_Support_Case.listView-meta.xml
<ListView>
    <fullName>Dodge_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Dodge Support</label>
    <queue>Dodge_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>