force-app/main/default/objects/Case/listViews/FHT_Team_Case.listView-meta.xml
<ListView>
    <fullName>FHT_Team_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>FHT Team</label>
    <queue>FHT_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>