force-app/main/default/objects/Case/listViews/Jpetto_Agentforce_Team_Case.listView-meta.xml
<ListView>
    <fullName>Jpetto_Agentforce_Team_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Jpetto Agentforce Team</label>
    <queue>Jpetto_Agentforce_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>