force-app/main/default/objects/Case/listViews/Jpetto_Project_Manager_Team_Case.listView-meta.xml
<ListView>
    <fullName>Jpetto_Project_Manager_Team_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Jpetto Project Manager Team</label>
    <queue>Jpetto_Project_Manager_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>