force-app/main/default/objects/Case/listViews/Recon_Support_Case.listView-meta.xml
<ListView>
    <fullName>Recon_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Recon Support</label>
    <queue>Recon_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>