force-app/main/default/objects/Case/listViews/ShrinkLink_Team_Case.listView-meta.xml
<ListView>
    <fullName>ShrinkLink_Team_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>ShrinkLink Team</label>
    <queue>ShrinkLink_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>