force-app/main/default/objects/Case/listViews/Sophus_Support_Case.listView-meta.xml
<ListView>
    <fullName>Sophus_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Sophus Support</label>
    <queue>Sophus_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>